Feat/94 event selective (#100)
* fix(event): fix recurring event re-modify error #94

* fix(event): fix modified rec-event instance delete error #94

* chore(test): update personalEventServiceTest #94

* feat(test): add additional personalEventServiceTest #94

* feat(event): implement eventParticipant entity #94

* chore(event): add event_participants selective fields s in event Dtos #94

* feat(event): consider selective participant in team event service #94

* chore(event): introduce eventRawService #94

* chore(event): apply selective participant when get personal event #94

* feat(event): implement event query & check logic with optional participants #94

* chore(event): remove dependency for eventQueryService in eventCommandService #94

* chore(event): apply selective event in teamEventService #94

* chore(event): remove duplicated logic in eventCommandService #94

* chore(test): update personalEventServiceTest #94

* chore(test): update teamEventServiceTest #94

* chore(test): update personalEventServiceTest #94

* chore(test): update TeamEventServiceTest #94

* chore(event): remove unnecessacry method in eventQueryService #94

* chore(event): remove unnecessary logic in eventQueryService #94