@@ -9,6 +9,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.access.AccessDeniedException;
+import org.springframework.test.util.ReflectionTestUtils;
 import unischedule.calendar.entity.Calendar;
 import unischedule.calendar.service.internal.CalendarRawService;
 import unischedule.events.domain.Event;
@@ -21,6 +22,7 @@ import unischedule.events.dto.EventServiceDto;
 import unischedule.events.dto.EventUpdateDto;
 import unischedule.events.dto.PersonalEventCreateRequestDto;
 import unischedule.events.dto.RecurringEventCreateRequestDto;
+import unischedule.events.dto.RecurringInstanceDeleteRequestDto;
 import unischedule.events.dto.RecurringInstanceModifyRequestDto;
 import unischedule.events.service.PersonalEventService;
 import unischedule.events.service.common.EventCommandService;
@@ -54,6 +56,7 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -89,9 +92,16 @@ class PersonalEventServiceTest {
 
     @AfterEach
     void tearDown() {
-        //verifyNoMoreInteractions(memberRawService, eventRawService, calendarRawService, teamMemberRawService);
+        verifyNoMoreInteractions(
+                memberRawService,
+                eventRawService,
+                calendarRawService,
+                teamMemberRawService,
+                eventQueryService,
+                eventCommandService
+        );
     }
-    
+
     @Test
     @DisplayName("개인 캘린더에 새 일정 등록")
     void makeEvent() {
@@ -103,33 +113,39 @@ class PersonalEventServiceTest {
                 LocalDateTime.now().plusHours(1),
                 true
         );
-        
+
         Event event = new Event(
                 "새 회의",
                 "주간 회의",
                 requestDto.startTime(),
                 requestDto.endTime(),
-                true
+                true,
+                false
         );
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
 
         given(personalCalendar.getCalendarId()).willReturn(calendarId);
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
 
-        given(eventCommandService.createSingleEvent(eq(personalCalendar), eq(List.of(calendarId)), any(EventCreateDto.class)))
+        doNothing().when(eventQueryService).checkNewSingleEventOverlapForMember(any(), anyList(), any(), any());
+
+        given(eventCommandService.createSingleEvent(eq(personalCalendar), any(EventCreateDto.class)))
                 .willReturn(event);
-        
+
         // when
         EventCreateResponseDto result = eventService.makePersonalSingleEvent(memberEmail, requestDto);
-        
+
         // then
         assertThat(result).isNotNull();
         assertThat(result.title()).isEqualTo("새 회의");
         assertThat(result.description()).isEqualTo("주간 회의");
         verify(memberRawService).findMemberByEmail(memberEmail);
         verify(calendarRawService, times(2)).getMyPersonalCalendar(owner);
-        verify(eventCommandService).createSingleEvent(eq(personalCalendar), anyList(), any(EventCreateDto.class));
+        verify(teamMemberRawService).findByMember(owner);
+        verify(eventQueryService).checkNewSingleEventOverlapForMember(any(), anyList(), any(), any());
+        verify(eventCommandService).createSingleEvent(eq(personalCalendar), any(EventCreateDto.class));
     }
 
     @Test
@@ -137,7 +153,7 @@ class PersonalEventServiceTest {
     void makePersonalRecurringEvent() {
         // given
         RecurringEventCreateRequestDto requestDto = new RecurringEventCreateRequestDto(
-                "반복 회의", "매주", LocalDateTime.now(), LocalDateTime.now().plusHours(1), false, "FREQ=WEEKLY");
+                "반복 회의", "매주", LocalDateTime.now(), LocalDateTime.now().plusHours(1), false, "FREQ=WEEKLY", null);
         Event savedEvent = TestUtil.makeRecurringEvent("반복 회의", "매주");
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
@@ -145,7 +161,11 @@ class PersonalEventServiceTest {
         given(personalCalendar.getCalendarId()).willReturn(calendarId);
         doNothing().when(personalCalendar).validateOwner(owner);
 
-        given(eventCommandService.createRecurringEvent(eq(personalCalendar), eq(List.of(calendarId)), eq(requestDto)))
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
+
+        doNothing().when(eventQueryService).checkNewRecurringEventOverlapForMember(any(), anyList(), any(), any(), any());
+
+        given(eventCommandService.createRecurringEvent(eq(personalCalendar), eq(requestDto)))
                 .willReturn(savedEvent);
 
         // when
@@ -157,8 +177,9 @@ class PersonalEventServiceTest {
         verify(memberRawService).findMemberByEmail(memberEmail);
         verify(calendarRawService, times(2)).getMyPersonalCalendar(owner);
         verify(personalCalendar).validateOwner(owner);
-        verify(eventCommandService).createRecurringEvent(eq(personalCalendar), eq(List.of(calendarId)), eq(requestDto));
-        verify(eventQueryService, never()).checkNewRecurringEventOverlap(anyList(), any(), any(), any()); // Not called directly
+        verify(teamMemberRawService).findByMember(owner);
+        verify(eventQueryService).checkNewRecurringEventOverlapForMember(any(), anyList(), any(), any(), any());
+        verify(eventCommandService).createRecurringEvent(eq(personalCalendar), eq(requestDto));
     }
 
     @Test
@@ -177,14 +198,19 @@ class PersonalEventServiceTest {
         given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
         given(personalCalendar.getCalendarId()).willReturn(calendarId);
 
-        given(eventCommandService.createSingleEvent(eq(personalCalendar), eq(List.of(calendarId)), any(EventCreateDto.class)))
-                .willThrow(new InvalidInputException("겹치는 일정이 있어 등록할 수 없습니다."));
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
+
+        doThrow(new InvalidInputException("겹치는 일정이 있어 등록할 수 없습니다."))
+                .when(eventQueryService)
+                .checkNewSingleEventOverlapForMember(any(), anyList(), any(), any());
         // when & then
         assertThatThrownBy(() -> eventService.makePersonalSingleEvent(memberEmail, requestDto))
                 .isInstanceOf(InvalidInputException.class)
                 .hasMessage("겹치는 일정이 있어 등록할 수 없습니다.");
 
-        verify(eventCommandService).createSingleEvent(eq(personalCalendar), eq(List.of(calendarId)), any(EventCreateDto.class));
+        verify(memberRawService).findMemberByEmail(memberEmail);
+        verify(calendarRawService, times(2)).getMyPersonalCalendar(owner);
+        verify(teamMemberRawService).findByMember(owner);
     }
 
     @Test
@@ -228,12 +254,12 @@ class PersonalEventServiceTest {
         given(teamMemberRawService.findByMember(owner)).willReturn(List.of(teamMember));
         given(calendarRawService.getTeamCalendar(team)).willReturn(teamCalendar);
 
-        given(eventQueryService.getEvents(calendarIds, start, end))
+        given(eventQueryService.getEventsForMember(eq(owner), eq(calendarIds), eq(start), eq(end)))
                 .willReturn(List.of(event1, event2));
 
         // when
         List<EventGetResponseDto> result = eventService.getPersonalEvents(memberEmail, start, end);
-        
+
         // then
         assertThat(result).hasSize(2);
         assertThat(result.getFirst().title()).isEqualTo(event1.title());
@@ -243,7 +269,7 @@ class PersonalEventServiceTest {
         verify(calendarRawService).getMyPersonalCalendar(owner);
         verify(teamMemberRawService).findByMember(owner);
         verify(calendarRawService).getTeamCalendar(team);
-        verify(eventQueryService).getEvents(calendarIds, start, end);
+        verify(eventQueryService).getEventsForMember(eq(owner), eq(calendarIds), eq(start), eq(end));
     }
 
     @Test
@@ -254,7 +280,7 @@ class PersonalEventServiceTest {
         Event existingEvent = spy(TestUtil.makeEvent("일정", "내용"));
         existingEvent.connectCalendar(personalCalendar);
 
-        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", "새 내용", null, null, true);
+        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", "새 내용", null, null, true, null);
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(eventRawService.findEventById(eventId)).willReturn(existingEvent);
@@ -263,12 +289,14 @@ class PersonalEventServiceTest {
         given(personalCalendar.getCalendarId()).willReturn(calendarId);
         given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
 
+        doNothing().when(eventQueryService).checkEventUpdateOverlapForMember(any(), anyList(), any(), any(), any());
+
         doAnswer(invocation -> {
             Event eventArg = invocation.getArgument(0);
-            EventUpdateDto dtoArg = invocation.getArgument(2);
+            EventUpdateDto dtoArg = invocation.getArgument(1);
             eventArg.modifyEvent(dtoArg.title(), dtoArg.content(), dtoArg.startTime(), dtoArg.endTime(), dtoArg.isPrivate());
             return eventArg;
-        }).when(eventCommandService).modifySingleEvent(eq(existingEvent), anyList(), any(EventUpdateDto.class)); // Use anyList() here
+        }).when(eventCommandService).modifySingleEvent(eq(existingEvent), any(EventUpdateDto.class));
 
         doNothing().when(existingEvent).validateEventOwner(owner);
 
@@ -283,8 +311,8 @@ class PersonalEventServiceTest {
         verify(existingEvent).validateEventOwner(owner);
         verify(calendarRawService).getMyPersonalCalendar(owner);
         verify(teamMemberRawService).findByMember(owner);
-
-        verify(eventCommandService).modifySingleEvent(eq(existingEvent), anyList(), any(EventUpdateDto.class)); // Use anyList() here too
+        verify(eventQueryService).checkEventUpdateOverlapForMember(any(), anyList(), any(), any(), any());
+        verify(eventCommandService).modifySingleEvent(eq(existingEvent), any(EventUpdateDto.class));
     }
 
     @Test
@@ -294,14 +322,17 @@ class PersonalEventServiceTest {
         Long eventId = 1L;
         Event originalEvent = TestUtil.makeRecurringEvent("반복 회의", "주간 회의");
         originalEvent.connectCalendar(personalCalendar);
+        ReflectionTestUtils.setField(originalEvent, "eventId", eventId);
         LocalDateTime originalStartTime = originalEvent.getStartAt().plusDays(7);
+        LocalDateTime newStartTime = originalStartTime.plusHours(1);
+        LocalDateTime newEndTime = originalStartTime.plusHours(2);
 
         RecurringInstanceModifyRequestDto requestDto = new RecurringInstanceModifyRequestDto(
                 originalStartTime,
                 "변경된 회의",
                 "내용 변경",
-                originalStartTime.plusHours(1),
-                originalStartTime.plusHours(2),
+                newStartTime,
+                newEndTime,
                 false
         );
 
@@ -315,6 +346,12 @@ class PersonalEventServiceTest {
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
 
+        given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
+        given(personalCalendar.getCalendarId()).willReturn(calendarId);
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
+
+        doNothing().when(eventQueryService).checkEventUpdateOverlapForMember(eq(owner), anyList(), eq(newStartTime), eq(newEndTime), eq(originalEvent));
+
         given(eventCommandService.modifyRecurringInstance(eq(originalEvent), eq(requestDto)))
                 .willReturn(savedOverride);
         // when
@@ -324,6 +361,10 @@ class PersonalEventServiceTest {
         verify(memberRawService).findMemberByEmail(memberEmail);
         verify(eventRawService).findEventById(eventId);
 
+        verify(calendarRawService).getMyPersonalCalendar(owner);
+        verify(teamMemberRawService).findByMember(owner);
+        verify(eventQueryService).checkEventUpdateOverlapForMember(any(), anyList(), any(), any(), any());
+
         verify(eventCommandService).modifyRecurringInstance(eq(originalEvent), eq(requestDto));
         assertThat(result.eventId()).isEqualTo(originalEvent.getEventId());
         assertThat(result.title()).isEqualTo("변경된 회의");
@@ -332,12 +373,14 @@ class PersonalEventServiceTest {
     }
 
     @Test
-    @DisplayName("반복 일정의 특정 날짜(instance) 재수정 시 기존 EventOverride 업데이트")
+    @DisplayName("반복 일정의 특정 날짜(instance) 재수정 시 기존 EventOverride 업데이트 - 시간 변경 없음")
     void modifyRecurringInstance_UpdateExistingOverride() {
         // given
         Long eventId = 1L;
         Event originalEvent = spy(TestUtil.makeRecurringEvent("반복 일정", "주간 회의"));
         originalEvent.connectCalendar(personalCalendar);
+        ReflectionTestUtils.setField(originalEvent, "eventId", eventId);
+
         LocalDateTime originalStartTime = originalEvent.getStartAt().plusDays(7);
 
         RecurringInstanceModifyRequestDto requestDto = new RecurringInstanceModifyRequestDto(
@@ -362,6 +405,10 @@ class PersonalEventServiceTest {
         given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
         doNothing().when(originalEvent).validateEventOwner(owner);
 
+        given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
+        given(personalCalendar.getCalendarId()).willReturn(calendarId);
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
+
         given(eventCommandService.modifyRecurringInstance(eq(originalEvent), eq(requestDto)))
                 .willReturn(updatedOverride);
 
@@ -374,8 +421,82 @@ class PersonalEventServiceTest {
         verify(originalEvent).validateEventOwner(owner);
         verify(eventCommandService).modifyRecurringInstance(eq(originalEvent), eq(requestDto));
 
+        verify(calendarRawService).getMyPersonalCalendar(owner);
+        verify(teamMemberRawService).findByMember(owner);
+
         assertThat(result.title()).isEqualTo("두 번째 수정");
         assertThat(result.description()).isEqualTo("내용도 수정");
+        assertThat(result.isRecurring()).isTrue();
+    }
+
+    @Test
+    @DisplayName("반복 일정의 특정 날짜(instance) 재수정 시 기존 EventOverride 업데이트 - 시간 변경")
+    void modifyRecurringInstance_re() {
+        Long eventId = 1L;
+        Event originalEvent = spy(TestUtil.makeRecurringEvent("주간 회의", "내용"));
+        originalEvent.connectCalendar(personalCalendar);
+        ReflectionTestUtils.setField(originalEvent, "eventId", eventId);
+        LocalDateTime originalOccurrence = originalEvent.getStartAt().plusWeeks(1);
+        LocalDateTime firstModifiedStartTime = originalOccurrence.plusDays(1);
+
+        EventOverride existingOverride = spy(new EventOverride(
+                originalEvent,
+                originalOccurrence,
+                "1차 수정",
+                null,
+                firstModifiedStartTime,
+                firstModifiedStartTime.plusHours(1),
+                false
+        ));
+        ReflectionTestUtils.setField(existingOverride, "id", 100L);
+
+        LocalDateTime secondModifiedStartTime = firstModifiedStartTime.plusDays(1);
+        RecurringInstanceModifyRequestDto secondRequestDto = new RecurringInstanceModifyRequestDto(
+                firstModifiedStartTime,
+                "회의 2차 변경",
+                "장소 B",
+                secondModifiedStartTime,
+                secondModifiedStartTime.plusHours(1),
+                true
+        );
+
+        EventOverride updatedOverride = spy(new EventOverride(
+                originalEvent,
+                originalOccurrence,
+                "회의 2차 변경",
+                "장소 B",
+                secondModifiedStartTime,
+                secondModifiedStartTime.plusHours(1),
+                true
+        ));
+        ReflectionTestUtils.setField(updatedOverride, "id", 100L);
+
+        given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
+        given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
+        doNothing().when(originalEvent).validateEventOwner(owner);
+
+        given(calendarRawService.getMyPersonalCalendar(owner)).willReturn(personalCalendar);
+        given(personalCalendar.getCalendarId()).willReturn(calendarId);
+        given(teamMemberRawService.findByMember(owner)).willReturn(List.of());
+
+        given(eventCommandService.modifyRecurringInstance(eq(originalEvent), eq(secondRequestDto))).willReturn(updatedOverride);
+
+        EventGetResponseDto result = eventService.modifyPersonalRecurringInstance(memberEmail, eventId, secondRequestDto);
+
+        verify(memberRawService).findMemberByEmail(memberEmail);
+        verify(eventRawService).findEventById(eventId);
+        verify(originalEvent).validateEventOwner(owner);
+
+        verify(calendarRawService).getMyPersonalCalendar(owner);
+        verify(teamMemberRawService).findByMember(owner);
+        verify(eventQueryService).checkEventUpdateOverlapForMember(any(), anyList(), any(), any(), any());
+
+        verify(eventCommandService).modifyRecurringInstance(eq(originalEvent), eq(secondRequestDto));
+
+        assertThat(result.eventId()).isEqualTo(eventId);
+        assertThat(result.title()).isEqualTo("회의 2차 변경");
+        assertThat(result.startTime()).isEqualTo(secondModifiedStartTime);
+        assertThat(result.isPrivate()).isTrue();
         assertThat(result.isRecurring()).isTrue();
     }
 
@@ -388,7 +509,7 @@ class PersonalEventServiceTest {
         Event existingEvent = spy(TestUtil.makeEvent("다른 사람 일정", "내용"));
 
         existingEvent.connectCalendar(personalCalendar);
-        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", null, null, null, null);
+        EventModifyRequestDto requestDto = new EventModifyRequestDto("새 제목", null, null, null, null, null);
 
         given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
         given(eventRawService.findEventById(eventId)).willReturn(existingEvent);
@@ -401,6 +522,10 @@ class PersonalEventServiceTest {
         assertThatThrownBy(() -> eventService.modifyPersonalEvent(memberEmail, eventId, requestDto))
                 .isInstanceOf(AccessDeniedException.class)
                 .hasMessage("해당 캘린더에 대한 접근 권한이 없습니다.");
+
+        verify(memberRawService).findMemberByEmail(memberEmail);
+        verify(eventRawService).findEventById(eventId);
+        verify(existingEvent).validateEventOwner(owner);
     }
 
     @Test
@@ -429,6 +554,42 @@ class PersonalEventServiceTest {
     }
 
     @Test
+    @DisplayName("수정된 반복 일정 특정 날짜 삭제 성공")
+    void deleteRecurringInstanceModified() {
+        Long eventId = 1L;
+        Event originalEvent = spy(TestUtil.makeRecurringEvent("주간 회의", "내용"));
+        originalEvent.connectCalendar(personalCalendar);
+        ReflectionTestUtils.setField(originalEvent, "eventId", eventId);
+        LocalDateTime originalOccurrence = originalEvent.getStartAt().plusWeeks(1);
+        LocalDateTime modifiedStartTime = originalOccurrence.plusDays(1);
+
+        EventOverride existingOverride = spy(new EventOverride(
+                originalEvent,
+                originalOccurrence,
+                "수정됨",
+                null,
+                modifiedStartTime,
+                modifiedStartTime.plusHours(1),
+                false
+        ));
+        ReflectionTestUtils.setField(existingOverride, "id", 100L);
+
+        RecurringInstanceDeleteRequestDto requestDto = new RecurringInstanceDeleteRequestDto(modifiedStartTime);
+
+        given(memberRawService.findMemberByEmail(memberEmail)).willReturn(owner);
+        given(eventRawService.findEventById(eventId)).willReturn(originalEvent);
+        doNothing().when(originalEvent).validateEventOwner(owner);
+        doNothing().when(eventCommandService).deleteRecurringEventInstance(eq(originalEvent), eq(requestDto));
+
+        eventService.deletePersonalRecurringInstance(memberEmail, eventId, requestDto);
+
+        verify(memberRawService).findMemberByEmail(memberEmail);
+        verify(eventRawService).findEventById(eventId);
+        verify(originalEvent).validateEventOwner(owner);
+        verify(eventCommandService).deleteRecurringEventInstance(eq(originalEvent), eq(requestDto));
+    }
+
+    @Test
     @DisplayName("일정 삭제 실패 - 존재하지 않는 일정")
     void deleteEventFailNotFound() {
         // given
@@ -441,128 +602,132 @@ class PersonalEventServiceTest {
         assertThatThrownBy(() -> eventService.deletePersonalEvent(memberEmail, eventId))
                 .isInstanceOf(EntityNotFoundException.class)
                 .hasMessage("해당 일정을 찾을 수 없습니다.");
+
+        // [수정됨] (verify 추가)
+        verify(memberRawService).findMemberByEmail(memberEmail);
+        verify(eventRawService).findEventById(eventId);
         verify(eventRawService, never()).deleteEvent(any());
     }
-    
+
     @Test
     @DisplayName("다가오는 개인 일정 조회 성공")
     void getUpcomingMyEvent_success() {
         //given
         String email = "test@test.com";
-        
+
         Member member = owner;
         Team team = TestUtil.makeTeam();
         TeamMember teamMember = new TeamMember(team, member, TeamRole.LEADER);
-        
+
         Calendar teamCalendar = spy(TestUtil.makeTeamCalendar(owner, team));
         when(teamCalendar.getCalendarId()).thenReturn(100L);
-        
+
         Calendar personalCalendar = spy(TestUtil.makePersonalCalendar(owner));
         when(personalCalendar.getCalendarId()).thenReturn(200L);
-        
+
         when(memberRawService.findMemberByEmail(email)).thenReturn(member);
         when(teamMemberRawService.findByMember(member)).thenReturn(List.of(teamMember));
         when(calendarRawService.getTeamCalendar(team)).thenReturn(teamCalendar);
         when(calendarRawService.getMyPersonalCalendar(member)).thenReturn(personalCalendar);
-        
+
         LocalDateTime start = LocalDate.now().plusDays(1).atStartOfDay();
         LocalDateTime end = LocalDate.now().plusDays(8).atStartOfDay();
-        
+
         EventServiceDto event1 = new EventServiceDto(
-            1L,
-            "회의",
-            "주간 회의",
-            LocalDateTime.of(2025, 9, 10, 10, 0),
-            LocalDateTime.of(2025, 9, 10, 11, 0),
-            true,
-            false
+                1L,
+                "회의",
+                "주간 회의",
+                LocalDateTime.of(2025, 9, 10, 10, 0),
+                LocalDateTime.of(2025, 9, 10, 11, 0),
+                true,
+                false
         );
-        
+
         EventServiceDto event2 = new EventServiceDto(
-            2L,
-            "워크샵",
-            "분기별 워크샵",
-            LocalDateTime.of(2025, 9, 15, 14, 0),
-            LocalDateTime.of(2025, 9, 15, 17, 0),
-            false,
-            false
+                2L,
+                "워크샵",
+                "분기별 워크샵",
+                LocalDateTime.of(2025, 9, 15, 14, 0),
+                LocalDateTime.of(2025, 9, 15, 17, 0),
+                false,
+                false
         );
-        
-        when(eventQueryService.getEvents(anyList(), eq(start), eq(end)))
-            .thenReturn(List.of(event1, event2));
-        
+
+        when(eventQueryService.getEventsForMember(eq(member), anyList(), eq(start), eq(end)))
+                .thenReturn(List.of(event1, event2));
+
         // when
         List<EventGetResponseDto> result = eventService.getUpcomingMyEvent(email);
-        
+
         // then
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).title()).isEqualTo("회의");
-        
+        assertThat(result.getFirst().title()).isEqualTo("회의");
+
         verify(memberRawService).findMemberByEmail(email);
         verify(teamMemberRawService).findByMember(member);
         verify(calendarRawService).getTeamCalendar(team);
         verify(calendarRawService).getMyPersonalCalendar(member);
-        verify(eventQueryService).getEvents(anyList(), eq(start), eq(end));
+        verify(eventQueryService).getEventsForMember(eq(member), anyList(), eq(start), eq(end));
     }
-    
+
     @Test
     @DisplayName("오늘의 개인 일정 조회 성공")
     void getTodayMyEvent_success() {
         //given
         String email = "today@test.com";
-        
+
         Member member = owner;
         Team team = TestUtil.makeTeam();
         TeamMember teamMember = TestUtil.makeTeamMember(team, member);
-        
+
         Calendar teamCalendar = spy(TestUtil.makeTeamCalendar(owner, team));
         when(teamCalendar.getCalendarId()).thenReturn(100L);
-        
+
         Calendar personalCalendar = spy(TestUtil.makePersonalCalendar(owner));
         when(personalCalendar.getCalendarId()).thenReturn(200L);
-        
+
         LocalDateTime start = LocalDate.now().atStartOfDay();
         LocalDateTime end = LocalDate.now().plusDays(1).atStartOfDay();
-        
+
         EventServiceDto event1 = new EventServiceDto(
-            1L,
-            "회의",
-            "주간 회의",
-            LocalDateTime.of(2025, 9, 10, 10, 0),
-            LocalDateTime.of(2025, 9, 10, 11, 0),
-            true,
-            false
+                1L,
+                "회의",
+                "주간 회의",
+                LocalDateTime.of(2025, 9, 10, 10, 0),
+                LocalDateTime.of(2025, 9, 10, 11, 0),
+                true,
+                false
         );
-        
+
         EventServiceDto event2 = new EventServiceDto(
-            2L,
-            "워크샵",
-            "분기별 워크샵",
-            LocalDateTime.of(2025, 9, 15, 14, 0),
-            LocalDateTime.of(2025, 9, 15, 17, 0),
-            false,
-            false
+                2L,
+                "워크샵",
+                "분기별 워크샵",
+                LocalDateTime.of(2025, 9, 15, 14, 0),
+                LocalDateTime.of(2025, 9, 15, 17, 0),
+                false,
+                false
         );
-        
+
         when(memberRawService.findMemberByEmail(email)).thenReturn(member);
         when(teamMemberRawService.findByMember(member)).thenReturn(List.of(teamMember));
         when(calendarRawService.getTeamCalendar(team)).thenReturn(teamCalendar);
         when(calendarRawService.getMyPersonalCalendar(member)).thenReturn(personalCalendar);
-        
-        when(eventQueryService.getEvents(anyList(), eq(start), eq(end))).thenReturn(List.of(event1, event2));
-        
+
+        when(eventQueryService.getEventsForMember(eq(member), anyList(), eq(start), eq(end))).thenReturn(List.of(event1, event2));
+
         //when
         List<EventGetResponseDto> result = eventService.getTodayMyEvent(email);
-        
+
         //then
         assertThat(result).hasSize(2);
         assertThat(result.get(0).title()).isEqualTo("회의");
         assertThat(result.get(1).title()).isEqualTo("워크샵");
-        
+
         verify(memberRawService).findMemberByEmail(email);
         verify(teamMemberRawService).findByMember(member);
         verify(calendarRawService).getTeamCalendar(team);
         verify(calendarRawService).getMyPersonalCalendar(member);
-        verify(eventQueryService).getEvents(anyList(), eq(start), eq(end));
+        verify(eventQueryService).getEventsForMember(eq(member), anyList(), eq(start), eq(end));
     }
 }
